--- a/config/services.yaml
+++ b/config/services.yaml
@@ -23,9 +23,11 @@ services:
 
     # controllers are imported separately to make sure services can be injected
     # as action arguments even if you don't extend any base controller class
-    App\Action\:
-        resource: '../src/Action/'
+    App\Actions\:
+        resource: '../src/Actions/'
         tags: ['controller.service_arguments']
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+
+    Cocur\Slugify\Slugify: ~
