--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "cocur/slugify": "^4.0",
         "composer/package-versions-deprecated": "1.11.99.1",
         "doctrine/doctrine-bundle": "^2.2",
+        "doctrine/doctrine-fixtures-bundle": "^3.4",
         "doctrine/doctrine-migrations-bundle": "^3.0",
         "doctrine/orm": "^2.8",
         "ramsey/uuid-doctrine": "^1.6",
@@ -20,6 +21,7 @@
         "symfony/framework-bundle": "5.2.*",
         "symfony/maker-bundle": "^1.29",
         "symfony/proxy-manager-bridge": "5.2.*",
+        "symfony/string": "5.2.*",
         "symfony/twig-bundle": "5.2.*",
         "symfony/webpack-encore-bundle": "^1.11",
         "symfony/yaml": "5.2.*",
@@ -68,5 +70,8 @@
             "allow-contrib": false,
             "require": "5.2.*"
         }
+    },
+    "require-dev": {
+        "fakerphp/faker": "^1.13"
     }
 }
