--- a/composer.json
+++ b/composer.json
@@ -79,6 +79,7 @@
         }
     },
     "require-dev": {
-        "fakerphp/faker": "^1.13"
+        "fakerphp/faker": "^1.13",
+        "squizlabs/php_codesniffer": "^3.5"
     }
 }
