--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,6 @@
         "ext-ctype": "*",
         "ext-iconv": "*",
         "cocur/slugify": "^4.0",
-        "composer/package-versions-deprecated": "1.11.99.1",
         "doctrine/doctrine-bundle": "^2.2",
         "doctrine/doctrine-fixtures-bundle": "^3.4",
         "doctrine/doctrine-migrations-bundle": "^3.0",
@@ -83,6 +82,7 @@
     },
     "require-dev": {
         "fakerphp/faker": "^1.13",
-        "squizlabs/php_codesniffer": "^3.5"
+        "squizlabs/php_codesniffer": "^3.5",
+        "composer/package-versions-deprecated": "1.11.99.1"
     }
 }
