--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -23,6 +23,7 @@ security:
                     - App\Security\LoginFormAuthenticator
             logout:
                 path: logout
+                target: logout_message
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#firewalls-authentication
