--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "symfony/console": "5.2.*",
         "symfony/debug-bundle": "5.2.*",
         "symfony/dotenv": "5.2.*",
+        "symfony/filesystem": "5.2.*",
         "symfony/flex": "^1.3.1",
         "symfony/form": "5.2.*",
         "symfony/framework-bundle": "5.2.*",
